Adding key press functionality

--- a/battleship.html
+++ b/battleship.html
@@ -91,7 +91,7 @@ form input {
 <input type="button" id="fireButton" value="Fire!">
 </form>
 </div>
-<script src="script.js">
+<script type = "text/javascript" src="script.js">
 </script>
 </body>
 </html>
